# OpenScanner

./: .gitignore  LICENSE  README.md  README_CN.md  README_EN.md  main.py  pyproject.toml  requirements.txt  setup.py
config/: settings.yaml
core/: __init__.py  browser.py  engine.py  reasoner.py  request.py  spider.py
core/ai/: __init__.py  api_provider.py  auditor.py  base.py  debate.py  engine.py  local_provider.py  preprocessor.py  prompts.py  rlhf.py
plugins/: __init__.py  base.py
plugins/audit/: ai_audit.py  malware_scan.py
plugins/info/: __init__.py  waf_check.py
plugins/pocs/: __init__.py  bola_idor.py  dom_xss.py  sqli_scan.py  xss_scan.py
report/: __init__.py
tests/: __init__.py  test_consensus_flow.py  test_plugin_system.py  test_reporter.py  test_sqli_plugin.py  validate_new_features.py
utils/: __init__.py  analyser.py  mutator.py  patch_advisor.py  poc_gen.py  reporter.py
web/: __init__.py  app.py
