[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openscanner"
version = "1.5.0"
description = "Hybrid Security Assessment Platform — DAST | SAST | IAST | AI Reasoning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "OpenScanner Team"},
]
keywords = ["security", "scanner", "dast", "sast", "vulnerability", "xss", "sqli", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]

dependencies = [
    "httpx[http2]>=0.27.0",
    "anyio>=4.0.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "rich>=14.0.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
web = [
    "streamlit>=1.35.0",
    "plotly>=5.18.0",
    "pandas>=2.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
]
browser = [
    "playwright>=1.40.0",
]
ai-local = [
    "llama-cpp-python>=0.2.0",
    "huggingface_hub>=0.20.0",
]
report = [
    "reportlab>=4.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]
all = [
    "openscanner[web,browser,ai-local,report,dev]",
]

[project.scripts]
openscanner = "main:main"

[project.urls]
Homepage = "https://github.com/kyzzniko-lang/OpenScanner"
Documentation = "https://github.com/kyzzniko-lang/OpenScanner#readme"
Repository = "https://github.com/kyzzniko-lang/OpenScanner"
Issues = "https://github.com/kyzzniko-lang/OpenScanner/issues"
Changelog = "https://github.com/kyzzniko-lang/OpenScanner/blob/main/CHANGELOG.md"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["core*", "plugins*", "utils*", "web*"]
exclude = ["tests*", "scratch*", "web.frontend*"]

[tool.ruff]
target-version = "py39"
line-length = 120
src = ["core", "plugins", "utils", "web"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008", "SIM108"]

[tool.ruff.lint.isort]
known-first-party = ["core", "plugins", "utils", "web"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests/", "scratch/", "web/frontend/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]
